--- a/src/admin/components/cart/style.scss
+++ b/src/admin/components/cart/style.scss
@@ -1,3 +1,12 @@
 #wrapper {
+    padding: 10px;
+}
 
+#listwrapper {
+    height: 100%;
+    overflow: hidden;
+}
+
+#list {
+    overflow: scroll;
 }
