--- a/src/admin/components/history/template.html
+++ b/src/admin/components/history/template.html
@@ -47,7 +47,7 @@
         <button type="button"
                 onclick="this.form.addCash()"
                 class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-            <i class="material-icons">add_box</i>
+            <i class="material-icons">attach_money</i>
             CAJA
             <span class="mdl-button__ripple-container">
                         <span class="mdl-ripple"></span>
@@ -81,9 +81,18 @@
             </span>
         </button>
         <button type="button"
+                onclick="this.form.goToCart()"
+                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            <i class="material-icons">shopping_cart</i>
+            CESTA
+            <span class="mdl-button__ripple-container">
+                        <span class="mdl-ripple"></span>
+            </span>
+        </button>
+        <button type="button"
                 onclick="this.form.createBill()"
                 class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-            <i class="material-icons">add_box</i>
+            <i class="material-icons">receipt</i>
             FACTURA
             <span class="mdl-button__ripple-container">
                         <span class="mdl-ripple"></span>
