--- a/src/admin/components/menuItems/template.html
+++ b/src/admin/components/menuItems/template.html
@@ -15,10 +15,10 @@
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">account_balance_wallet</i>
         {{urls.cash.menu}}
     </a>
-    <!--<a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.cart.href}}">-->
-        <!--<i class="mdl-color-text&#45;&#45;blue-grey-400 material-icons" role="presentation">shopping_cart</i>-->
-        <!--{{urls.cart.menu}}-->
-    <!--</a>-->
+    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.cart.href}}">
+        <i class="mdl-color-text&#45;&#45;blue-grey-400 material-icons" role="presentation">shopping_cart</i>
+        {{urls.cart.menu}}
+    </a>
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.bills.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">account_balance</i>
         {{urls.bills.menu}}
