--- a/src/admin/components/cash/edit-deposit.html
+++ b/src/admin/components/cash/edit-deposit.html
@@ -1,37 +1,17 @@
 <dialog class="mdl-dialog">
     <form #form>
         <div class="mdl-dialog__content">
+            <h6>DEPOSITO EN BANCO</h6>
             <p>
             <div class="mdl-textfield mdl-js-textfield">
                 <input #date autocomplete="off" class="mdl-textfield__input" type="datetime-local" id="date">
             </div>
 
-            <div #clientwrapper class="mdl-selectfield mdl-js-selectfield">
-                <select #client id="clientId" name="clientId" class="mdl-selectfield__select">
-
-                </select>
-                <label class="mdl-selectfield__label" for="clientId">CLIENTE:</label>
-            </div>
-            <div #descriptionwrapper class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input #description autocomplete="off"
-                       value="{{description}}" class="mdl-textfield__input" type="text" id="description">
-                <label class="mdl-textfield__label" for="description">DESCRIPCION</label>
-            </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input #amount autocomplete="off"
                        value="{{amount}}" class="mdl-textfield__input" type="number" id="amount">
                 <label class="mdl-textfield__label" for="amount">VALOR</label>
             </div>
-
-            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-                <input type="radio" id="option-1" class="mdl-radio__button" name="type" value="tarjeta" {{tarjeta}} />
-                <span class="mdl-radio__label">TARJETA CREDITO</span>
-            </label>
-            <br/>
-            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-                <input type="radio" id="option-2" class="mdl-radio__button" name="type" value="efectivo" {{efectivo}}/>
-                <span class="mdl-radio__label">EFECTIVO</span>
-            </label>
             <br/>
             <div class="mdl-selectfield mdl-js-selectfield">
                 <select #user id="user" name="user" class="mdl-selectfield__select">
