--- a/src/admin/components/cash/template.html
+++ b/src/admin/components/cash/template.html
@@ -1,16 +1,20 @@
 <form #wrapper>
-    <div style="width: 100%; text-align: center;">
+    <div style="width: 100%; padding: 0 10px;">
         <div class="mdl-textfield mdl-js-textfield">
             <input #date autocomplete="off" class="mdl-textfield__input" type="date" onchange="this.form.change()">
         </div>
+
+        <button #add type="button" onclick="this.form.add()"
+            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            CAJA <i class="material-icons">add</i>
+        </button>
+        <button #deposit type="button" onclick="this.form.deposit()"
+            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+            DEPOSITO <i class="material-icons">add</i>
+        </button>
+        <div style="float: right;margin: 30px 20px 0 0;display: inline-block;">EFECTIVO ACTUAL: <span #actualcash></span></div>
     </div>
     <div #cash></div>
-    <button #add
-            type="button"
-            onclick="this.form.add()"
-            class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-        <i class="material-icons">add</i>
-    </button>
     <footer #footer class="mdl-mega-footer mdl-grid">
         <div class="mdl-cell--3-col" #creditcards></div>
         <div class="mdl-cell--3-col" #net></div>
