--- a/src/admin/components/homePage/level2.html
+++ b/src/admin/components/homePage/level2.html
@@ -1,6 +1,6 @@
 <div #wrapper class="mdl-grid cgt-content">
     <div class="cgt-charts mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-        <table width="100%">
+        <table width="100%" style="font-size: 9px">
             <tr>
                 <th></th>
                 {{#each users}}
@@ -8,25 +8,25 @@
                 {{/each}}
             </tr>
             <tr>
-                <td>CAJA DEL DIA</td>
+                <td>DIA</td>
                 {{#each users}}
                 <td  style="text-align: right;">{{this.today}}</td>
                 {{/each}}
             </tr>
             <tr style="background-color: #eeeeee">
-                <td>CAJA DEL MES</td>
+                <td>MES</td>
                 {{#each users}}
                 <td  style="text-align: right;">{{this.month}}</td>
                 {{/each}}
             </tr>
             <tr>
-                <td>CAJA DEL TRIMESTRE</td>
+                <td>TRIM</td>
                 {{#each users}}
                 <td  style="text-align: right;">{{this.trimonth}}</td>
                 {{/each}}
             </tr>
             <tr style="background-color: #eeeeee">
-                <td>CAJA DEL AÑO</td>
+                <td>AÑO</td>
                 {{#each users}}
                 <td  style="text-align: right;">{{this.year}}</td>
                 {{/each}}
@@ -38,55 +38,23 @@
     </div>
     <div class="cgt-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
         <div class="cgt-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
-            <div class="mdl-card__title mdl-card--expand ">
-                <h2 class="mdl-card__title-text">Updates</h2>
-            </div>
-            <div class="mdl-card__supporting-text ">
-                Non dolore elit adipisicing ea reprehenderit consectetur culpa.
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    Read More
-                </button>
+            <div style="padding: 5px">
+                <h5>EFECTIVO ACTUAL</h5>
+                <table>
+                    <tr>
+                        <td>SALITRE</td>
+                        <td>{{cashSalitre}}</td>
+                    </tr>
+                    <tr>
+                        <td>BUENAVENTURA</td>
+                        <td>{{cashBuenaventura}}</td>
+                    </tr>
+                </table>
             </div>
         </div>
         <div class="cgt-separator mdl-cell--1-col"></div>
         <div class="cgt-options mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
-            <div class="mdl-card__supporting-text">
-                <h3>View options</h3>
-                <ul>
-                    <li>
-                        <label for="chkbox1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                            <input type="checkbox" id="chkbox1" class="mdl-checkbox__input">
-                            <span class="mdl-checkbox__label">Click per object</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label for="chkbox2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                            <input type="checkbox" id="chkbox2" class="mdl-checkbox__input">
-                            <span class="mdl-checkbox__label">Views per object</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label for="chkbox3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                            <input type="checkbox" id="chkbox3" class="mdl-checkbox__input">
-                            <span class="mdl-checkbox__label">Objects selected</span>
-                        </label>
-                    </li>
-                    <li>
-                        <label for="chkbox4" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                            <input type="checkbox" id="chkbox4" class="mdl-checkbox__input">
-                            <span class="mdl-checkbox__label">Objects viewed</span>
-                        </label>
-                    </li>
-                </ul>
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">Change
-                    location</a>
-                <div class="mdl-layout-spacer"></div>
-                <i class="material-icons">location_on</i>
-            </div>
+            
         </div>
     </div>
 </div>
