small hours fixes

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -14,19 +14,19 @@
         </div>
         <div #ana class="calendar-item">
         </div>
-        <div #jollyiii class="calendar-item">
+        <div #inma class="calendar-item">
         </div>
         <div #maria class="calendar-item">
         </div>
-        <div #susanna class="calendar-item">
+        <div #elsa class="calendar-item">
         </div>
-        <div #andre class="calendar-item">
+        <div #msepulveda class="calendar-item">
         </div>
         <div #wendy class="calendar-item">
         </div>
         <div #chloe class="calendar-item">
         </div>
-        <div #vanessa class="calendar-item">
+        <div #susana class="calendar-item">
         </div>
         <div #eila class="calendar-item">
         </div>
