--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -6,11 +6,11 @@
 #carmen_v {height: 615px;}
 #estefania {height: 615px;}
 #ana {height: 615px;}
-#jollyIII {height: 615px;}
+#inma {height: 615px;}
 #maria {height: 615px;}
-#susanna {height: 615px;}
+#elsa {height: 615px;}
 #wendy {height: 615px;}
 #chloe {height: 615px;}
-#vanessa {height: 615px;}
+#susana {height: 615px;}
 #eila {height: 615px;}
-#andre {height: 615px;}
+#msepulveda {height: 615px;}
