some major changes on the layout

--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="app" style="opacity: 0" class="cgt-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-        <header id="header" class="cgt-header mdl-layout__header"></header>
+        <header id="header" style="min-height: 6px;" class="cgt-header mdl-layout__header"></header>
         <div id="menu" class="cgt-drawer mdl-layout__drawer "></div>
         <main id="main" class="mdl-layout__content"></main>
     </div>
