--- a/src/admin/components/menuItems/template.html
+++ b/src/admin/components/menuItems/template.html
@@ -19,20 +19,30 @@
         <i class="mdl-color-text&#45;&#45;blue-grey-400 material-icons" role="presentation">shopping_cart</i>
         {{urls.cart.menu}}
     </a>
-    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.bills.href}}">
+    <!-- <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.bills.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">account_balance</i>
         {{urls.bills.menu}}
-    </a>
+    </a> -->
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.orders.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_atm</i>
         {{urls.orders.menu}}
     </a>
-    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.print.href}}">
+    <!-- <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.print.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">print</i>
         {{urls.print.menu}}
-    </a>
+    </a> -->
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.newsletter.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">email</i>
         {{urls.newsletter.menu}}
     </a>
+    <form #form>
+        <button 
+            style="width: 100%; border: 0"
+             type="button"
+            class="mdl-navigation__link" onclick="this.form.logout(event)">
+            <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">exit_to_app</i>
+            SALIR ...
+        </button>
+    </form>
+    
 </nav>
