--- a/src/admin/components/orders/orders-list.html
+++ b/src/admin/components/orders/orders-list.html
@@ -1,10 +1,8 @@
 <div #wrapper>
     <table width="100%">
         <tr>
-            <td>FACTURA</td>
-            <td>FECHA</td>
-            <td>PAGADO</td>
-            <td>CORREO</td>
+            <td>&nbsp;</td>
+            <td>FECHA / CORREO</td>
             <td>TOTAL</td>
             <td></td>
         </tr>
@@ -21,14 +19,12 @@
                 </span>
                 </button>
             </td>
-            <td>{{this.date}}</td>
-
-            <td>{{this.payed}}</td>
-
-            <td>{{this.email}}</td>
-
-            <td>{{this.amount}}</td>
-
+            <td style="line-height: 20px;">
+                <em style="font-size: 13px">{{this.date}}</em>
+                <br/>
+                <strong>{{this.email}}</strong>
+            </td>
+            <td width="70px">{{this.amount}}</td>
             <td>
                 {{this.buttons}}
             </td>
