--- a/src/admin/components/orders/style.scss
+++ b/src/admin/components/orders/style.scss
@@ -1,5 +1,19 @@
 #wrapper {
-  padding: 10px;
+  height: 100%;
+}
+
+#wrapperbuttons {
+  position: relative;
+  padding: 5px;
+  background: white;
+  top: 0;
+}
+
+#orderswrapper {
+  overflow: scroll;
+}
+#orders {
+  padding-bottom: 90px;
 }
 
 #footer {
