--- a/src/admin/components/login/template.html
+++ b/src/admin/components/login/template.html
@@ -10,9 +10,8 @@
             </div>
         </div>
     </div>
-    <input #login type="button"
+    <input #login type="submit"
            value="{{login.button}}"
-           onclick="this.form.login()"
            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" />
 
 </form>
