small layout change

--- a/src/admin/components/cash/edit-cash.html
+++ b/src/admin/components/cash/edit-cash.html
@@ -18,6 +18,7 @@
                 <label class="mdl-textfield__label" for="description">DESCRIPCION</label>
             </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <div><em #amountnote style="font-size: 10px; color: red;"></em></div>
                 <input #amount autocomplete="off"
                        value="{{amount}}" class="mdl-textfield__input" type="number" id="amount">
                 <label class="mdl-textfield__label" for="amount">VALOR</label>
