cart/cash from calendar

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -1,9 +1,20 @@
 <form #wrapper class="mdl-grid cgt-content">
     <div #minicalendar
-        class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--4-col-desktop">
+        class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--3-col-desktop">
     </div>
+    <output #cart
+        class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--1-col-desktop"
+        style="    text-align: center; padding-top: 50px;border: 2px dotted #56ab2b;"
+        ondrop="this.form.cartDrop()"
+        ondragenter="this.form.cartDragOver()"
+        ondragover="this.form.cartDragOver()"
+        ondragleave="this.form.cartDragLeave()">
+        <i class="material-icons">system_update_alt</i>
+        <br/>
+        <i class="material-icons">shopping_cart</i>
+    </output>
     <div #processes
-        class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-desktop">
+        class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
     </div>
     <div class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper" style="position: relative;">
         <div #carmen class="calendar-item">
