--- a/src/admin/components/menuItems/template.html
+++ b/src/admin/components/menuItems/template.html
@@ -1,4 +1,4 @@
-<nav #wrapper class="cgt-navigation mdl-navigation">
+<nav #wrapper class="cgt-navigation mdl-navigation" style="font-family: HelveticaCondensed">
     <a class="mdl-navigation__link"  onclick="window.navigate(this, event)" href="{{urls.homePage.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>
         {{urls.homePage.menu}}
