--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -2,6 +2,17 @@
 
 }
 
+#cart {
+    border: 2px dotted rgb(86, 171, 43);
+    flex: auto;
+    padding-top: 25px;
+}
+#client {
+    border: 2px dotted rgb(86, 171, 43);
+    flex: auto;
+    padding-top: 25px;
+}
+
 #carmen {height: 615px;}
 #carmen_v {height: 615px;}
 #estefania {height: 615px;}
