--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -23,7 +23,7 @@
     <div #processes
         class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
     </div>
-    <div class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper" style="position: relative;">
+    <div class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper" style="position: relative;     overflow: scroll !important;">
         <div #carmen class="calendar-item">
         </div>
         <div #carmen_v class="calendar-item">
