--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -2,7 +2,7 @@
     <div #minicalendar
         class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--3-col-desktop">
     </div>
-    <div
+    <div #central
         class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--1-col-desktop"
         style="text-align: center;">
         <output #cart
@@ -21,10 +21,36 @@
         </output>
     </div>
     <div #processes
-        class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+        class="mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
     </div>
-    <div class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper" style="position: relative;     overflow: scroll !important;">
-        <div #carmen class="calendar-item">
+    <div #headerwrapper class="calendar-header-wrapper">
+        <div #carmen_header class="calendar-item">
+        </div>
+        <div #carmen_v_header class="calendar-item">
+        </div>
+        <div #estefania_header class="calendar-item">
+        </div>
+        <div #ana_header class="calendar-item">
+        </div>
+        <div #inma_header class="calendar-item">
+        </div>
+        <div #maria_header class="calendar-item">
+        </div>
+        <div #elsa_header class="calendar-item">
+        </div>
+        <div #msepulveda_header class="calendar-item">
+        </div>
+        <div #wendy_header class="calendar-item">
+        </div>
+        <div #chloe_header class="calendar-item">
+        </div>
+        <div #susana_header class="calendar-item">
+        </div>
+        <div #eila_header class="calendar-item">
+        </div>
+    </div>
+    <div #calendar class="mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper">
+        <div #carmen class="calendar-item carmen">
         </div>
         <div #carmen_v class="calendar-item">
         </div>
