--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -34,6 +34,15 @@
     display:flex;
 }
 
+#buttonwrapper {
+    display: none;
+}
+
+.mobile #buttonwrapper {
+    display: block;
+    margin: 0 6px;
+}
+
 #ana_header {
     display: none;
 }
