--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -23,6 +23,32 @@
     <div #processes
         class="mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
     </div>
+    <div #buttonwrapper>
+        <button type="button" #carmen_button class="calendar-button" onclick="this.form.showCal('carmen')">
+        </button>
+        <button type="button" #carmen_v_button class="calendar-button" onclick="this.form.showCal('carmen_v')">
+        </button>
+        <button type="button" #estefania_button class="calendar-button" onclick="this.form.showCal('estefania')">
+        </button>
+        <button type="button" #ana_button class="calendar-button" onclick="this.form.showCal('ana')">
+        </button>
+        <button type="button" #inma_button class="calendar-button" onclick="this.form.showCal('inma')">
+        </button>
+        <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
+        </button>
+        <button type="button" #elsa_button class="calendar-button" onclick="this.form.showCal('elsa')">
+        </button>
+        <button type="button" #msepulveda_button class="calendar-button" onclick="this.form.showCal('msepulveda')">
+        </button>
+        <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
+        </button>
+        <button type="button" #chloe_button class="calendar-button" onclick="this.form.showCal('chloe')">
+        </button>
+        <button type="button" #susana_button class="calendar-button" onclick="this.form.showCal('susana')">
+        </button>
+        <button type="button" #eila_button class="calendar-button" onclick="this.form.showCal('eila')">
+        </button>
+    </div>
     <div #headerwrapper class="calendar-header-wrapper">
         <div #carmen_header class="calendar-item">
         </div>
