--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -30,8 +30,6 @@
         </button>
         <button type="button" #estefania_button class="calendar-button" onclick="this.form.showCal('estefania')">
         </button>
-        <button type="button" #ana_button class="calendar-button" onclick="this.form.showCal('ana')">
-        </button>
         <button type="button" #inma_button class="calendar-button" onclick="this.form.showCal('inma')">
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
@@ -40,11 +38,13 @@
         </button>
         <button type="button" #msepulveda_button class="calendar-button" onclick="this.form.showCal('msepulveda')">
         </button>
+        <button type="button" #susana_button class="calendar-button" onclick="this.form.showCal('susana')">
+        </button>
         <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
         </button>
-        <button type="button" #chloe_button class="calendar-button" onclick="this.form.showCal('chloe')">
+        <button type="button" #msanchez_button class="calendar-button" onclick="this.form.showCal('msanchez')">
         </button>
-        <button type="button" #susana_button class="calendar-button" onclick="this.form.showCal('susana')">
+        <button type="button" #chloe_button class="calendar-button" onclick="this.form.showCal('chloe')">
         </button>
         <button type="button" #eila_button class="calendar-button" onclick="this.form.showCal('eila')">
         </button>
@@ -56,8 +56,6 @@
         </div>
         <div #estefania_header class="calendar-item">
         </div>
-        <div #ana_header class="calendar-item">
-        </div>
         <div #inma_header class="calendar-item">
         </div>
         <div #maria_header class="calendar-item">
@@ -66,11 +64,13 @@
         </div>
         <div #msepulveda_header class="calendar-item">
         </div>
+        <div #susana_header class="calendar-item">
+        </div>
         <div #wendy_header class="calendar-item">
         </div>
-        <div #chloe_header class="calendar-item">
+        <div #msanchez_header class="calendar-item">
         </div>
-        <div #susana_header class="calendar-item">
+        <div #chloe_header class="calendar-item">
         </div>
         <div #eila_header class="calendar-item">
         </div>
@@ -82,8 +82,6 @@
         </div>
         <div #estefania class="calendar-item">
         </div>
-        <div #ana class="calendar-item">
-        </div>
         <div #inma class="calendar-item">
         </div>
         <div #maria class="calendar-item">
@@ -92,11 +90,13 @@
         </div>
         <div #msepulveda class="calendar-item">
         </div>
+        <div #susana class="calendar-item">
+        </div>
         <div #wendy class="calendar-item">
         </div>
-        <div #chloe class="calendar-item">
+        <div #msanchez class="calendar-item">
         </div>
-        <div #susana class="calendar-item">
+        <div #chloe class="calendar-item">
         </div>
         <div #eila class="calendar-item">
         </div>
