--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -42,3 +42,11 @@
     display: block;
     margin: 0 6px;
 }
+
+#msepulveda { display: none; }
+#msepulveda_header { display: none; }
+#msepulveda_button { display: none; }
+
+#chloe { display: none; }
+#chloe_header { display: none; }
+#chloe_button { display: none; }
