--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -30,21 +30,21 @@
         </button>
         <button type="button" #estefania_button class="calendar-button" onclick="this.form.showCal('estefania')">
         </button>
-        <button type="button" #inma_button class="calendar-button" onclick="this.form.showCal('inma')">
+        <button type="button" #elena_button class="calendar-button" onclick="this.form.showCal('elena')">
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
-        </button>
-        <button type="button" #elsa_button class="calendar-button" onclick="this.form.showCal('elsa')">
         </button>
         <button type="button" #msepulveda_button class="calendar-button" onclick="this.form.showCal('msepulveda')">
         </button>
         <button type="button" #susana_button class="calendar-button" onclick="this.form.showCal('susana')">
         </button>
+        <button type="button" #irene_button class="calendar-button" onclick="this.form.showCal('irene')">
+        </button>
         <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
         </button>
-        <button type="button" #msanchez_button class="calendar-button" onclick="this.form.showCal('msanchez')">
-        </button>
         <button type="button" #chloe_button class="calendar-button" onclick="this.form.showCal('chloe')">
+        </button>
+        <button type="button" #elsa_button class="calendar-button" onclick="this.form.showCal('elsa')">
         </button>
         <button type="button" #eila_button class="calendar-button" onclick="this.form.showCal('eila')">
         </button>
@@ -56,21 +56,21 @@
         </div>
         <div #estefania_header class="calendar-item">
         </div>
-        <div #inma_header class="calendar-item">
+        <div #elena_header class="calendar-item">
         </div>
         <div #maria_header class="calendar-item">
-        </div>
-        <div #elsa_header class="calendar-item">
         </div>
         <div #msepulveda_header class="calendar-item">
         </div>
         <div #susana_header class="calendar-item">
         </div>
+        <div #irene_header class="calendar-item">
+        </div>
         <div #wendy_header class="calendar-item">
         </div>
-        <div #msanchez_header class="calendar-item">
-        </div>
         <div #chloe_header class="calendar-item">
+        </div>
+        <div #elsa_header class="calendar-item">
         </div>
         <div #eila_header class="calendar-item">
         </div>
@@ -82,21 +82,21 @@
         </div>
         <div #estefania class="calendar-item">
         </div>
-        <div #inma class="calendar-item">
+        <div #elena class="calendar-item">
         </div>
         <div #maria class="calendar-item">
-        </div>
-        <div #elsa class="calendar-item">
         </div>
         <div #msepulveda class="calendar-item">
         </div>
         <div #susana class="calendar-item">
         </div>
+        <div #irene class="calendar-item">
+        </div>
         <div #wendy class="calendar-item">
         </div>
-        <div #msanchez class="calendar-item">
-        </div>
         <div #chloe class="calendar-item">
+        </div>
+        <div #elsa class="calendar-item">
         </div>
         <div #eila class="calendar-item">
         </div>
