--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -337,6 +337,11 @@ th {
     color: #ffffff !important;
 }
 
+.process-color-25 {
+    background-color: #9f9513 !important;
+    color: #ffffff !important;
+}
+
 /** NOTE */
 .process-color-96 {
     background-color: #ffffff !important;
