--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -30,7 +30,7 @@
         </button>
         <button type="button" #estefania_button class="calendar-button" onclick="this.form.showCal('estefania')">
         </button>
-        <button type="button" #elena_button class="calendar-button" onclick="this.form.showCal('elena')">
+        <button type="button" #lidia_button class="calendar-button" onclick="this.form.showCal('elena')">
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
         </button>
@@ -40,9 +40,9 @@
         </button>
         <button type="button" #irene_button class="calendar-button" onclick="this.form.showCal('irene')">
         </button>
-        <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
+        <button type="button" #cristina_button class="calendar-button" onclick="this.form.showCal('chloe')">
         </button>
-        <button type="button" #chloe_button class="calendar-button" onclick="this.form.showCal('chloe')">
+        <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
         </button>
         <button type="button" #elsa_button class="calendar-button" onclick="this.form.showCal('elsa')">
         </button>
@@ -56,7 +56,7 @@
         </div>
         <div #estefania_header class="calendar-item">
         </div>
-        <div #elena_header class="calendar-item">
+        <div #lidia_header class="calendar-item">
         </div>
         <div #maria_header class="calendar-item">
         </div>
@@ -66,9 +66,9 @@
         </div>
         <div #irene_header class="calendar-item">
         </div>
-        <div #wendy_header class="calendar-item">
+        <div #cristina_header class="calendar-item">
         </div>
-        <div #chloe_header class="calendar-item">
+        <div #wendy_header class="calendar-item">
         </div>
         <div #elsa_header class="calendar-item">
         </div>
@@ -82,7 +82,7 @@
         </div>
         <div #estefania class="calendar-item">
         </div>
-        <div #elena class="calendar-item">
+        <div #lidia class="calendar-item">
         </div>
         <div #maria class="calendar-item">
         </div>
@@ -92,9 +92,9 @@
         </div>
         <div #irene class="calendar-item">
         </div>
-        <div #wendy class="calendar-item">
+        <div #cristina class="calendar-item">
         </div>
-        <div #chloe class="calendar-item">
+        <div #wendy class="calendar-item">
         </div>
         <div #elsa class="calendar-item">
         </div>
