adding Yolanda as employee

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -34,8 +34,6 @@
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
         </button>
-        <button type="button" #msepulveda_button class="calendar-button" onclick="this.form.showCal('msepulveda')">
-        </button>
         <button type="button" #susana_button class="calendar-button" onclick="this.form.showCal('susana')">
         </button>
         <button type="button" #irene_button class="calendar-button" onclick="this.form.showCal('irene')">
@@ -43,6 +41,8 @@
         <button type="button" #cristina_button class="calendar-button" onclick="this.form.showCal('chloe')">
         </button>
         <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
+        </button>
+        <button type="button" #yolimar_button class="calendar-button" onclick="this.form.showCal('yolimar')">
         </button>
         <button type="button" #elsa_button class="calendar-button" onclick="this.form.showCal('elsa')">
         </button>
@@ -60,8 +60,6 @@
         </div>
         <div #maria_header class="calendar-item">
         </div>
-        <div #msepulveda_header class="calendar-item">
-        </div>
         <div #susana_header class="calendar-item">
         </div>
         <div #irene_header class="calendar-item">
@@ -69,6 +67,8 @@
         <div #cristina_header class="calendar-item">
         </div>
         <div #wendy_header class="calendar-item">
+        </div>
+        <div #yolimar_header class="calendar-item">
         </div>
         <div #elsa_header class="calendar-item">
         </div>
@@ -86,8 +86,6 @@
         </div>
         <div #maria class="calendar-item">
         </div>
-        <div #msepulveda class="calendar-item">
-        </div>
         <div #susana class="calendar-item">
         </div>
         <div #irene class="calendar-item">
@@ -95,6 +93,8 @@
         <div #cristina class="calendar-item">
         </div>
         <div #wendy class="calendar-item">
+        </div>
+        <div #yolimar class="calendar-item">
         </div>
         <div #elsa class="calendar-item">
         </div>
