Some changes and fixes

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -30,7 +30,7 @@
         </button>
         <button type="button" #estefania_button class="calendar-button" onclick="this.form.showCal('estefania')">
         </button>
-        <button type="button" #lidia_button class="calendar-button" onclick="this.form.showCal('elena')">
+        <button type="button" #lidia_button class="calendar-button" onclick="this.form.showCal('lidia')">
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
         </button>
@@ -38,7 +38,9 @@
         </button>
         <button type="button" #irene_button class="calendar-button" onclick="this.form.showCal('irene')">
         </button>
-        <button type="button" #cristina_button class="calendar-button" onclick="this.form.showCal('chloe')">
+        <button type="button" #cristina_button class="calendar-button" onclick="this.form.showCal('cristina')">
+        </button>
+        <button type="button" #ana_button class="calendar-button" onclick="this.form.showCal('ana')">
         </button>
         <button type="button" #wendy_button class="calendar-button" onclick="this.form.showCal('wendy')">
         </button>
@@ -66,6 +68,8 @@
         </div>
         <div #cristina_header class="calendar-item">
         </div>
+        <div #ana_header class="calendar-item">
+        </div>
         <div #wendy_header class="calendar-item">
         </div>
         <div #yolimar_header class="calendar-item">
@@ -91,6 +95,8 @@
         <div #irene class="calendar-item">
         </div>
         <div #cristina class="calendar-item">
+        </div>
+        <div #ana class="calendar-item">
         </div>
         <div #wendy class="calendar-item">
         </div>
