--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -38,7 +38,7 @@
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
         </button>
-        <button type="button" #susana_button class="calendar-button" onclick="this.form.showCal('susana')">
+        <button type="button" #jesica_button class="calendar-button" onclick="this.form.showCal('jesica')">
         </button>
         <button type="button" #irene_button class="calendar-button" onclick="this.form.showCal('irene')">
         </button>
@@ -52,7 +52,7 @@
         </button>
         <button type="button" #yolimar_button class="calendar-button" onclick="this.form.showCal('yolimar')">
         </button>
-        <button type="button" #elsa_button class="calendar-button" onclick="this.form.showCal('elsa')">
+        <button type="button" #andrea_button class="calendar-button" onclick="this.form.showCal('andrea')">
         </button>
         <button type="button" #eila_button class="calendar-button" onclick="this.form.showCal('eila')">
         </button>
@@ -68,7 +68,7 @@
         </div>
         <div #maria_header class="calendar-item">
         </div>
-        <div #susana_header class="calendar-item">
+        <div #jesica_header class="calendar-item">
         </div>
         <div #irene_header class="calendar-item">
         </div>
@@ -82,7 +82,7 @@
         </div>
         <div #yolimar_header class="calendar-item">
         </div>
-        <div #elsa_header class="calendar-item">
+        <div #andrea_header class="calendar-item">
         </div>
         <div #eila_header class="calendar-item">
         </div>
@@ -98,7 +98,7 @@
         </div>
         <div #maria class="calendar-item">
         </div>
-        <div #susana class="calendar-item">
+        <div #jesica class="calendar-item">
         </div>
         <div #irene class="calendar-item">
         </div>
@@ -112,7 +112,7 @@
         </div>
         <div #yolimar class="calendar-item">
         </div>
-        <div #elsa class="calendar-item">
+        <div #andrea class="calendar-item">
         </div>
         <div #eila class="calendar-item">
         </div>
