--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -38,7 +38,7 @@
         </button>
         <button type="button" #maria_button class="calendar-button" onclick="this.form.showCal('maria')">
         </button>
-        <button type="button" #jesica_button class="calendar-button" onclick="this.form.showCal('jesica')">
+        <button type="button" #camila_button class="calendar-button" onclick="this.form.showCal('camila')">
         </button>
         <button type="button" #irene_button class="calendar-button" onclick="this.form.showCal('irene')">
         </button>
@@ -68,7 +68,7 @@
         </div>
         <div #maria_header class="calendar-item">
         </div>
-        <div #jesica_header class="calendar-item">
+        <div #camila_header class="calendar-item">
         </div>
         <div #irene_header class="calendar-item">
         </div>
@@ -98,7 +98,7 @@
         </div>
         <div #maria class="calendar-item">
         </div>
-        <div #jesica class="calendar-item">
+        <div #camila class="calendar-item">
         </div>
         <div #irene class="calendar-item">
         </div>
