--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -342,6 +342,16 @@ th {
     color: #ffffff !important;
 }
 
+.process-color-26 {
+    background-color: #d4d4d4 !important;
+    color: #000000 !important;
+}
+
+.process-color-27 {
+    background-color: #9a2020 !important;
+    color: #ffffff !important;
+}
+
 /** NOTE */
 .process-color-96 {
     background-color: #ffffff !important;
